--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -47,10 +47,6 @@ body {
   background-color: $white;
 }
 
-.warning {
-   display: none;
-}
-
 /* Basic Layout Boxes */
 
 .row, .column, .columns {
@@ -235,6 +231,27 @@ h3 {
   letter-spacing: 2px;
   font-size: 2.2em;
 }
+
+
+/* ShareThis */
+
+.row.stlinks {
+   width: 100%;
+   position: absolute;
+   top: 22%;
+   .st {
+      width: auto;
+      float: right;
+      padding-right: 20px;
+   }
+}
+
+.content {
+   width: 100%;
+   position: relative;
+   top: 50px;
+}
+
 
 /* About Us, Privacy Policy Pages */
 
@@ -744,6 +761,10 @@ form.selection-form {
 
 
 @media all and (min-width: 1024px), (min-width: 769px) and (max-width: 1023px) {
+   .stlinks {
+      top: 20%;
+   }
+
    .contact-form-content {
       max-width: 900px;
       margin: 0 auto;
@@ -788,6 +809,9 @@ form.selection-form {
 
 
 @media all and (max-width: 1023px) {
+   .stlinks {
+      top: 15%;
+   }
    .heading {
       font-size: 3.8em;
    }
@@ -798,6 +822,19 @@ form.selection-form {
 }
 
 @media all and (max-width: 768px) {
+
+   /* ShareThis */
+
+   .row.stlinks {
+      top: 17%;
+   }
+
+   .content {
+      width: 100%;
+      position: relative;
+      top: 50px;
+   }
+
    .page-body {
       overflow-x: hidden;
 	     position: relative;
@@ -977,6 +1014,17 @@ form.selection-form {
       font-size: 1.9em;
    }
 
+   .row.stlinks {
+      width: 100%;
+      position: absolute;
+      top: 15%;
+      .st {
+         width: auto;
+         float: right;
+         padding-right: 20px;
+      }
+   }
+
    .constituency-heading {
      font-size: 1.9em;
    }
@@ -1057,6 +1105,10 @@ form.selection-form {
 }
 
 @media all and (max-width: 480px) {
+
+   .row.stlinks {
+      top: 25%;
+   }
 
    .page-body {
       overflow-x: hidden;
@@ -1219,5 +1271,11 @@ form.selection-form {
    .contact-text {
       font-size: 0.8em;
    }
+}
+
+@media screen and (max-height: 480px) and (orientation: landscape) {
+      .row.stlinks {
+         top: 40%;
+      }
 }
 @import 'menu_mediaqueries';
