--- a/public/css/frontpage_styles.css
+++ b/public/css/frontpage_styles.css
@@ -4591,9 +4591,6 @@ h2 {
   letter-spacing: 2px;
   padding: 5px 0; }
 
-.warning {
-  display: none; }
-
 #menu-button.white_text i {
   color: rgba(255, 255, 255, 0.8); }
 
@@ -4605,6 +4602,9 @@ h2 {
   letter-spacing: 1px;
   display: block;
   text-align: right; }
+
+.fb-like {
+  display: inline; }
 
 .container {
   width: 100%;
@@ -4644,10 +4644,18 @@ h2 {
   position: relative;
   top: 20px; }
 
+.stlinks {
+  width: 100%;
+  position: absolute;
+  top: 22%; }
+  .stlinks .st {
+    width: auto;
+    float: right; }
+
 .postcode-search {
   width: 100%;
   position: absolute;
-  top: 30%; }
+  top: 25%; }
   .postcode-search .postcode-form {
     background-color: rgba(255, 255, 255, 0.3);
     padding: 10px;
@@ -4707,7 +4715,13 @@ footer {
 /* Media Queries */
 @media all and (max-width: 1024px) {
   .heading {
-    font-size: 3.8em; } }
+    font-size: 3.8em; }
+
+  .stlinks {
+    top: 22%; }
+
+  .postcode-search {
+    top: 25%; } }
 @media all and (max-width: 768px) {
   body {
     background: url(/images/background_768.jpg) no-repeat center center fixed;
@@ -4715,6 +4729,9 @@ footer {
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover; }
+
+  .stlinks {
+    top: 20%; }
 
   .page-body {
     overflow-x: hidden;
@@ -4727,7 +4744,7 @@ footer {
     left: 120px; }
 
   .postcode-search {
-    top: 20%; }
+    top: 21%; }
     .postcode-search .postcode-form {
       position: absolute;
       top: 50px;
@@ -4815,8 +4832,11 @@ footer {
     color: #101010;
     margin-right: 5px; }
 
+  .stlinks {
+    top: 100px; }
+
   .postcode-search {
-    top: 60px; }
+    top: 100px; }
     .postcode-search .postcode-form {
       background-color: rgba(255, 255, 255, 0.6);
       padding: 0;
