--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4794,7 +4794,8 @@ h3 {
   margin-left: 2%;
   letter-spacing: 2px;
   font-size: 2.8em;
-  font-weight: 200; }
+  font-weight: 200;
+  text-align: left; }
 
 .politician-info-container {
   margin: 0 10px; }
