--- a/public/css/frontpage_styles.css
+++ b/public/css/frontpage_styles.css
@@ -4611,8 +4611,10 @@ h3 {
   display: block;
   text-align: right; }
 
-.fb-like {
-  display: inline; }
+.t-f,
+.f-l {
+  display: inline-block;
+  padding: 5px; }
 
 .container {
   width: 100%;
@@ -4711,6 +4713,7 @@ footer {
     padding-bottom: 15px;
     text-align: center; }
     footer .s-m .s-m-i {
+      margin: 0 auto;
       text-align: center; }
       footer .s-m .s-m-i i {
         color: rgba(255, 255, 255, 0.4);
